2019-12-17  Martin Sebor  <msebor@redhat.com>

	PR c++/61339
	* doc/invoke.texi (-Wmismatched-tags, -Wredundant-tags): Document
	new C++ options.

2019-12-17  Michael Meissner  <meissner@linux.ibm.com>

	* config/rs6000/rs6000.c (num_insns_constant_gpr): Return 1 if the
	constant can be loaded with PLI if -mcpu=future.
	* config/rs6000/rs6000.md (add<mode>3): Add alternative to
	generate PADDI for 34-bit constants if -mcpu=future.
	(movdi_internal64): Add alternative to use PLI to load up 34-bit
	constants if -mcpu=future.
	(movsi_internal1): Add alternative to use PLI to load up 32-bit
	constants if -mcpu=future.
	* config/rs6000/predicates.md (add_operand): Allow eI constants.

2019-12-17  Jakub Jelinek  <jakub@redhat.com>

	PR target/92841
	* config/i386/i386.md (@stack_protect_set_1_<mode>,
	@stack_protect_test_1_<mode>): Use output_asm_insn.
	(*stack_protect_set_2_<mode>, *stack_protect_set_3): New define_insns
	and corresponding define_peephole2s.

2019-12-17  Jan Hubicka  <hubicka@ucw.cz>

	* symtab.c (symtab_node::get_partitioning_class): Aliases of external
	symbols are external.

2019-12-17  Christophe Lyon  <christophe.lyon@linaro.org>

	* config/arm/arm-protos.h (thumb1_gen_const_int): Add new prototype.
	* config/arm/arm.c (arm_option_check_internal): Remove restriction
	on MOVT for -mpure-code.
	(thumb1_gen_const_int): New function.
	(thumb1_legitimate_address_p): Support -mpure-code.
	(thumb1_rtx_costs): Likewise.
	(thumb1_size_rtx_costs): Likewise.
	(arm_thumb1_mi_thunk): Likewise.
	* config/arm/arm.h (CASE_VECTOR_PC_RELATIVE): Likewise.
	* config/arm/thumb1.md (thumb1_movsi_symbol_ref): New.
	(*thumb1_movhf): Support -mpure-code.
	* doc/invoke.texi (-mpure-code): Remove restriction on MOVT.

2019-12-17  Andrew Stubbs  <ams@codesourcery.com>

	* tree-vect-loop.c (vect_create_epilog_for_reduction): Mention pr92772
	in the comments.

2019-12-17  Andrew Stubbs  <ams@codesourcery.com>

	* config/gcn/gcn-valu.md (extract_last_<mode>): New expander.