@@ -1,3 +1,9 @@
+2019-12-18  Jakub Jelinek  <jakub@redhat.com>
+
+	PR lto/92972
+	* lto-wrapper.c (merge_and_complain): Use just "-fno-pie" instead of
+	big ? "-fno-pie" : "-fno-pie".  Formatting fixes.  Fix comment typo.
+
 2019-12-17  Martin Sebor  <msebor@redhat.com>
 
 	PR c++/61339
